fix bug with double lines for stretched

--- a/frontend/src/app/shared/custom/scoring/scoring.component.scss
+++ b/frontend/src/app/shared/custom/scoring/scoring.component.scss
@@ -1,6 +1,7 @@
 .scoring-error-badge {
   aspect-ratio: 1/1;
   height: 90%;
+  margin-left: 1.05px;
 }
 
 .scoring-container {
